refactor: 全面重构前后端，修复数据库设计和用户体验
数据库改造:
- s_posts.school → category_id 全链路重命名
- 删除冗余字段(posts_user_id, status, friend_nickname等)
- 新增 s_notification 通知表
- 新增10个查询索引，nickname 长度10→50
- 分类表新增 parent_id 支持树形结构

后端重构:
- 集成 Sa-Token 替代 JWT 鉴权
- 安装配置 RabbitMQ + 邮件消费者
- 新增 WebSocket 通知/私信基础设施
- Controller 返回值统一为 Result
- 修复 XSS 防护、CORS、收藏循环bug
- Redis expire 修复、BlockAttackInterceptor 启用
- 登录/注册接口 GET→POST

前端优化:
- 集成 Vditor Markdown 富文本编辑器
- 评论系统: 表情选择器+多级评论+点赞+回复
- 个人主页 4×3 网格布局+自适应
- 注册页面、404页面、路由标题更新
- 头像/昵称全链路修复
- 确认弹窗取消后仍执行删除的严重BUG修复
- 首页无限滚动重复数据修复
- 跨标签同步登录状态